--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -20,6 +20,10 @@
             .googleBtn {
                 background: #dd4b39;
             }
+            
+            .item-inner {
+                background: #f5f6f7;
+            }
         } 
     }
 }
