--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -3,4 +3,20 @@ page-chat {
         align-self: flex-start;
         font-size: 12px;
     }
+
+    .icon-circle, .icon-circle-large, .icon-circle-small{
+        position: relative;
+        display: inline-block;
+        margin: -1px;
+        width: 40px;
+        height: 40px; 
+         -moz-border-radius:50%;
+        -webkit-border-radius:50%;
+          border-radius: 50%;
+        border: 1px solid #ebebeb;
+        background: rgb(0, 161, 225); /*#ececec;ebebeb*/
+        color: #fff;
+        text-align:center;
+        line-height: 40px;
+    }
 }
