add chat icon placeholder

--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -19,4 +19,8 @@ page-chat {
         text-align:center;
         line-height: 40px;
     }
+
+    .icon-circle {
+        text-transform: uppercase;
+    }
 }
