--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,15 +20,15 @@ ion-header {
       box-shadow: none;
     }
   
-    .toolbar-title {
-      display: -webkit-flex;
-      display: flex;
-      -webkit-flex-direction: row;
-      flex-direction: row;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-    }
+    // .toolbar-title {
+    //   display: -webkit-flex;
+    //   display: flex;
+    //   -webkit-flex-direction: row;
+    //   flex-direction: row;
+    //   -webkit-align-items: center;
+    //   align-items: center;
+    //   -webkit-justify-content: center;
+    //   justify-content: center;
+    // }
     
   }
