--- a/src/pages/chats/chats.scss
+++ b/src/pages/chats/chats.scss
@@ -67,7 +67,6 @@ page-chat {
         padding: 2px 6px;
         border-radius: 50%;
         font-size: 11px;
-        right: 10px;
         top: 30px !important;
     }
 
@@ -80,7 +79,8 @@ page-chat {
     }
 
     .timeStamp {
-        left: 0;
+        position: absolute;
+        right: 10px !important;
     }
 
     .top30 {
