--- a/src/pages/chats/chats.scss
+++ b/src/pages/chats/chats.scss
@@ -8,8 +8,8 @@ page-chat {
         position: relative;
         display: inline-block;
         margin: -1px;
-        width: 40px;
-        height: 40px; 
+        width: 45px;
+        height: 45px; 
         -moz-border-radius:50%;
         -webkit-border-radius:50%;
         border-radius: 50%;
@@ -17,7 +17,16 @@ page-chat {
         background: #1e88e5; /*#ececec;ebebeb*/
         color: #fff;
         text-align:center;
-        line-height: 40px;
+        line-height: 42px;
+        font-size: 22px;
+    }
+
+    .input-wrapper ion-label {
+        margin: 8px 8px 8px 0 !important;
+    }
+
+    ion-avatar {
+        margin: 5px 16px 5px 0 !important;
     }
 
     .icon-circle {
@@ -52,22 +61,26 @@ page-chat {
         margin: 0 !important;
         font-size: 12px;
         position: relative;
-        top: 10px;
+        top: 8px;
         right: 10px;
     }
 
     .item-inner p {
        font-size: 12px !important;
+       overflow: hidden;
+       text-overflow: ellipsis;
+       width: calc(100% - 20px);
     }
 
     .unreadCount {
-        position: absolute;
+        position: absolute !important;
         color: #fff;
         background-color: #f53d3d;
-        padding: 2px 6px;
+        padding: 1px 6px;
         border-radius: 50%;
         font-size: 11px;
-        top: 30px !important;
+        top: 26px !important;
+        border-radius: 10px;
     }
 
     .fwB {
